--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-headroom": "^3.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.8.1",
     "react-tinder-card": "^1.2.0",
     "styled-components": "^5.1.1"
   },
