--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^7.17.1",
     "moment": "^2.28.0",
     "react": "^16.13.1",
+    "react-beforeunload": "^2.2.4",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-headroom": "^3.0.0",
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
